Do a production build.

--- a/src/html/alumni.html
+++ b/src/html/alumni.html
@@ -5,7 +5,7 @@
 
     <block name="pagetitle">Marshall University Alumni Association</block>
     <block name="hero">
-        <img src="/docs/assets/images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+        <img src="images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
     </block>
     <block name="header-extra">
         <div class="flex flex-wrap items-center w-content gap-4">
@@ -62,7 +62,7 @@
             <div class="muf-new-section">
                 <div class="flex items-center flex-col md:flex-row">
                     <div class="md:w-1/2 mlg:w-2/3">
-                        <img src="/docs/assets/images/perks.jpg" alt="Descripte text">
+                        <img src="images/perks.jpg" alt="Descripte text">
                     </div>
                     <div class="md:w-1/2 muf-cut-left">
                         <div class="bg-green text-white py-16 px-4 md:px-16">
@@ -454,7 +454,7 @@
                         position: new google.maps.LatLng(regionArray[i][0], regionArray[i][1]),
                         map: map,
                         title: regionArray[i][2],
-                        icon: '/docs/assets/images/map_marker.svg',
+                        icon: 'images/map_marker.svg',
                         clickable: false
                     });
 
@@ -473,7 +473,7 @@
                 var marker = new google.maps.Marker({
                     position: new google.maps.LatLng(26.614149, -81.825768), // Fort Meyer
                     map: map,
-                    icon: '/docs/assets/images/map_marker.svg',
+                    icon: 'images/map_marker.svg',
                     clickable: false
                 });
                 */
