--- a/src/html/event.html
+++ b/src/html/event.html
@@ -1,7 +1,7 @@
 <extends src="main.html" locals='{"bodyClass" : "muf-dark "}'>
     <block name="pagetitle">Regular Event Title</block>
     <block name="hero">
-        <img src="/docs/assets/images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+        <img src="images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
     </block>
     <block name="header-extra">
         
