--- a/src/html/home.html
+++ b/src/html/home.html
@@ -1,7 +1,7 @@
 <extends src="main.html" locals='{"bodyClass" : "muf-dark muf-tall-hero"}'>
     <block name="pagetitle">Supporting First-Generation Students to Rise and Reach Their Dreams</block>
     <block name="hero">
-        <img src="/docs/assets/images/home.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+        <img src="images/home.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
     </block>
     <block name="header-extra">
         <div class="flex flex-wrap items-center w-content gap-4">
