--- a/src/html/news.html
+++ b/src/html/news.html
@@ -1,7 +1,7 @@
 <extends src="main.html" locals='{"bodyClass" : "muf-dark"}'>
     <block name="pagetitle">Latest News</block>
     <block name="hero">
-        <img src="/docs/assets/images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+        <img src="images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
     </block>
     <block name="header-extra">
         
@@ -10,17 +10,17 @@
         <main class="overflow-hidden" id="main">
             <div class="skinny-container">
                 <div class="space-y-8 smed:space-y-16">
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser01.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser01.jpg"}'></include>
 
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser02.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser02.jpg"}'></include>
 
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser03.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser03.jpg"}'></include>
 
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser04.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser04.jpg"}'></include>
 
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser05.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser05.jpg"}'></include>
 
-                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "/docs/assets/images/news_teaser6.jpg"}'></include>
+                    <include src="news_teaser.html" locals='{"title" : "Chuck Oldaker establishes two funds at Marshall University honoring late wife, celebrating new business school", "image" : "images/news_teaser6.jpg"}'></include>
                 </div>
 
                 <div class="text-center my-16">
