--- a/src/html/special_event.html
+++ b/src/html/special_event.html
@@ -4,7 +4,7 @@
     </block>
     <block name="pagetitle">Homecoming</block>
     <block name="hero">
-        <img src="/docs/assets/images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+        <img src="images/homecoming.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
     </block>
     <block name="header-extra">
         
@@ -202,7 +202,7 @@
                 </div>
             </div>
 
-            <div class="muf-new-section muf-background-bleed flex items-stretch" style="background-image: url('/docs/assets/images/hero.jpg')">
+            <div class="muf-new-section muf-background-bleed flex items-stretch" style="background-image: url('images/hero.jpg')">
                 <div class="bg-charcoal/90 w-full text-white pt-24 md:pt-28 pb-20">
                     <h2 class="deco-rule deco-rule--white text-center muf-text-center">
                         Photo Highlights
@@ -217,16 +217,16 @@
                         }'
                     >
                         <div class="muf-carousel-item">
-                            <img src="/docs/assets/images/photo_highlight_01.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
+                            <img src="images/photo_highlight_01.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
                         </div>
                         <div class="muf-carousel-item">
-                            <img src="/docs/assets/images/photo_highlight_02.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
+                            <img src="images/photo_highlight_02.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
                         </div>
                         <div class="muf-carousel-item">
-                            <img src="/docs/assets/images/photo_highlight_03.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
+                            <img src="images/photo_highlight_03.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
                         </div>
                         <div class="muf-carousel-item">
-                            <img src="/docs/assets/images/photo_highlight_02.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
+                            <img src="images/photo_highlight_02.jpg" alt="Descriptive text for this photo" class="object-cover h-full w-full" />
                         </div>
                     </div>
                     <div class="text-center mt-8">
