Clean up file references

--- a/src/html/alumni.html
+++ b/src/html/alumni.html
@@ -454,7 +454,7 @@
                         position: new google.maps.LatLng(regionArray[i][0], regionArray[i][1]),
                         map: map,
                         title: regionArray[i][2],
-                        icon: 'images/map_marker.svg',
+                        icon: 'assets/images/map_marker.svg',
                         clickable: false
                     });
 
