Most of Dave’s fixes.

--- a/src/html/alumni.html
+++ b/src/html/alumni.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="">
                         <div class="">
-                            <div class="muf-carousel muf-stats-wrapper muf-alumni-stats-wrapper mt-12">
+                            <div class="muf-carousel muf-stats-wrapper muf-alumni-stats-wrapper mt-8">
                                 <div class="muf-carousel-item">
                                     <div class="muf-stats-metric muf-stats-metric--vertical">
                                         91,120
@@ -68,7 +68,7 @@
                         <div class="bg-green text-white py-16 px-4 md:px-16">
                             <h2 class="deco-rule deco-rule--white text-white">Perks of the Herd</h2>
                             <p>Pellentesque posuere. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Nulla neque dolor, sagittis eget, iaculis quis, molestie non, velit. Curabitur suscipit suscipit tellus. Praesent ac massa at ligula laoreet iaculis.</p>
-                            <div class="flex flex-wrap items-center w-content gap-4">
+                            <div class="flex flex-wrap items-center w-content gap-4 mt-8">
                                 <a href="#" class="muf-link-reset muf-button muf-button--white">
                                     Explore Member Benefits
                                 </a>
