--- a/src/html/news_article.html
+++ b/src/html/news_article.html
@@ -5,7 +5,7 @@
     <block name="maincontent">
         <main class="overflow-hidden" id="main">
             <div class="extra-skinny-container">
-                <div class="text-center font-bold uppercase text-sm mb-8">May 31, 2022</div>
+                <div class="text-center font-bold uppercase text-sm mb-12 md:mb-8">May 31, 2022</div>
                 <p>Pellentesque posuere. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Nulla neque dolor, sagittis eget, iaculis quis, molestie non, velit. Curabitur suscipit suscipit tellus. Praesent ac massa at ligula laoreet iaculis.</p>
 
                 <img src="images/news_article_story.jpg" alt="News Article Story" class="my-8" />
@@ -16,7 +16,7 @@
 
                 <p>Integer dignissim justo eget massa molestie euismod. Curabitur non nulla augue. Praesent non molestie ipsum, eu imperdiet tortor. Aliquam et nibh quis mi sagittis porta. Nam quis ante lacus. Nam tincidunt velit sed nibh molestie, quis convallis libero laoreet. Sed id vehicula sapien. Nulla dignissim enim eu venenatis molestie.</p>
 
-                <div class="text-center my-24 md:my-32">
+                <div class="text-center my-16">
                     <hr class="muf-dashed-border-t-dark" style="max-width:256px; margin:auto;" />
                 </div>
             </div>
@@ -37,7 +37,7 @@
                             <a href="#" class="muf-link-reset muf-button w-fit">
                                 Support the Business School
                             </a>
-                            <a href="#" class="muf-link-reset muf-button muf-button--white w-fit muf-border-green">
+                            <a href="#" class="muf-link-reset muf-button muf-button--transparent w-fit muf-border-green">
                                 Explore Giving Options
                             </a>
                         </div>
