--- a/src/html/special_event.html
+++ b/src/html/special_event.html
@@ -26,35 +26,35 @@
             <div class="extra-skinny-container muf-new-section">
                 <div class="grid grid-cols-3 gap-y-16 md:gap-y-20">
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Memorial Student Center Plaza</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Memorial Student Center Plaza</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Unity Walk &amp; Homecoming Court Announcement</h4>
+                        <h4 class="mb-4">Unity Walk &amp; Homecoming Court Announcement</h4>
                         <div>Students, teams, organizations, clubs, residence halls, faculty, staff and community members are welcome to join in this unifying walk around campus from the Marshall Rec Center to the Memorial Student Center Plaza to show their Marshall pride! Immediately following the walk, the Homecoming court will be announced.</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Facebook Live</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Facebook Live</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Exploring Marshall Video Series</h4>
+                        <h4 class="mb-4">Exploring Marshall Video Series</h4>
                         <div>Join us on Facebook or view anytime on YouTube for Episode 4 of Exploring Marshall – a professionally produced web video series taking a look at the iconic and brand new people and places that make Marshall so special!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Online</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Online</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Virtual Game Night</h4>
+                        <h4 class="mb-4">Virtual Game Night</h4>
                         <div>Join us for a night of fun and games! Free and open to all alumni, supporters and students, win cool prizes and enjoy a fun night hosted by the Marshall University Alumni Association. You will be emailed instructions and login information 24 hours prior to the event!</div>
                     </div>
                 </div>
@@ -66,46 +66,46 @@
             <div class="extra-skinny-container muf-new-section">
                 <div class="grid grid-cols-3 gap-y-16 md:gap-y-20">
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Intercultural Center</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Intercultural Center</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Intercultural Center Grand Opening / Ribbon Cutting</h4>
+                        <h4 class="mb-4">Intercultural Center Grand Opening / Ribbon Cutting</h4>
                         <div>Join the Marshall University family for the grand opening of the all-new Intercultural Center on campus.</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Student Center</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Student Center</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>MUBAA’s Masked Singer</h4>
+                        <h4 class="mb-4">MUBAA’s Masked Singer</h4>
                         <div>The Marshall University Black Alumni Association will host a special version of the Masked Singer.b video series taking a look at the iconic and brand new people and places that make Marshall so special!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Facebook Live</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Facebook Live</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Social Hour w/ Special Guest</h4>
+                        <h4 class="mb-4">Social Hour w/ Special Guest</h4>
                         <div>Join us on Facebook LIVE at 7 p.m. on Tuesday, Oct. 5 for a live chat and Q&A with a special guest hosted by Director of Alumni Relations Matt Hayes. Hear the latest from your alma mater, learn more about Marshall University and have an opportunity to ask your questions for this one hour chat!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Online</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Online</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Virtual Game Night</h4>
+                        <h4 class="mb-4">Virtual Game Night</h4>
                         <div>Join us for a night of fun and games! Free and open to all alumni, supporters and students, win cool prizes and enjoy a fun night hosted by the Marshall University Alumni Association. You will be emailed instructions and login information 24 hours prior to the event!</div>
                     </div>
                 </div>
@@ -117,35 +117,35 @@
             <div class="extra-skinny-container muf-new-section">
                 <div class="grid grid-cols-3 gap-y-16 md:gap-y-20">
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Memorial Student Center Plaza</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Memorial Student Center Plaza</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Unity Walk &amp; Homecoming Court Announcement</h4>
+                        <h4 class="mb-4">Unity Walk &amp; Homecoming Court Announcement</h4>
                         <div>Students, teams, organizations, clubs, residence halls, faculty, staff and community members are welcome to join in this unifying walk around campus from the Marshall Rec Center to the Memorial Student Center Plaza to show their Marshall pride! Immediately following the walk, the Homecoming court will be announced.</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Facebook Live</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Facebook Live</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Exploring Marshall Video Series</h4>
+                        <h4 class="mb-4">Exploring Marshall Video Series</h4>
                         <div>Join us on Facebook or view anytime on YouTube for Episode 4 of Exploring Marshall – a professionally produced web video series taking a look at the iconic and brand new people and places that make Marshall so special!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Online</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Online</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Virtual Game Night</h4>
+                        <h4 class="mb-4">Virtual Game Night</h4>
                         <div>Join us for a night of fun and games! Free and open to all alumni, supporters and students, win cool prizes and enjoy a fun night hosted by the Marshall University Alumni Association. You will be emailed instructions and login information 24 hours prior to the event!</div>
                     </div>
                 </div>
@@ -157,46 +157,46 @@
             <div class="extra-skinny-container muf-new-section">
                 <div class="grid grid-cols-3 gap-y-16 md:gap-y-20">
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Intercultural Center</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Intercultural Center</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Intercultural Center Grand Opening / Ribbon Cutting</h4>
+                        <h4 class="mb-4">Intercultural Center Grand Opening / Ribbon Cutting</h4>
                         <div>Join the Marshall University family for the grand opening of the all-new Intercultural Center on campus.</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Student Center</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Student Center</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>MUBAA’s Masked Singer</h4>
+                        <h4 class="mb-4">MUBAA’s Masked Singer</h4>
                         <div>The Marshall University Black Alumni Association will host a special version of the Masked Singer.b video series taking a look at the iconic and brand new people and places that make Marshall so special!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Facebook Live</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Facebook Live</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Social Hour w/ Special Guest</h4>
+                        <h4 class="mb-4">Social Hour w/ Special Guest</h4>
                         <div>Join us on Facebook LIVE at 7 p.m. on Tuesday, Oct. 5 for a live chat and Q&A with a special guest hosted by Director of Alumni Relations Matt Hayes. Hear the latest from your alma mater, learn more about Marshall University and have an opportunity to ask your questions for this one hour chat!</div>
                     </div>
 
                     <div class="muf-dashed-border-r-dark pr-4 mr-4 md:pr-8 md:mr-8">
-                        <div class="border-l border-green pl-2 md:pl-4">
-                            <div class="text-lg md:text-xl text-green">5:00 pm</div>
-                            <div class="text-sm md:text-base italic font-bold">Online</div>
+                        <div class="border-l-2 border-green pl-2 md:pl-4">
+                            <div class="text-lg md:text-xl text-green font-bold">5:00 pm</div>
+                            <div class="italic font-bold text-sm md:text-smed font-bold">Online</div>
                         </div>
                     </div>
                     <div class="col-span-2">
-                        <h4>Virtual Game Night</h4>
+                        <h4 class="mb-4">Virtual Game Night</h4>
                         <div>Join us for a night of fun and games! Free and open to all alumni, supporters and students, win cool prizes and enjoy a fun night hosted by the Marshall University Alumni Association. You will be emailed instructions and login information 24 hours prior to the event!</div>
                     </div>
                 </div>
