--- a/src/html/news.html
+++ b/src/html/news.html
@@ -32,6 +32,7 @@
                         </span>
                         Load More News
                     </button>
+                </div>
             </div>
         </main>
         <script></script>
